			SWI-Prolog ChangeLog
			====================

  * PORT: Improved configure check for non-aligned access on long values.
    On the ARM processor such access doesn't result in a crash, but in
    incorrect result.  With help of Sergio Martinez.

  * FIXED: Added overflow test for too many (>32 million) atoms.  TBD:
    turn into proper exception, but getting a relyable exception from
    PL_new_atom() is very difficult.  This at least is better than
    an uncontrolled crash.

  * FIXED: wait_for_input/3 crash if stream-list contains an
    non-stream.

  * FIXED: Handle "-F base" option in combination with -c file.pl.
    Reported by Alok Singh.

  * FIXED: configure when readline could not be found.  Nide Naoyuki.

  * ADDED: "-F base" option to plld, allows for embedding XPCE.

  * FIXED: Proper type-check on 1st argument of thread_create/[2,3]
    to avoid a low-level error when started with an invalid goal.

VERSION 4.0.11
==============

  * PORT: Integrated patches by John Towler, mostly dealing with
    building XPCE and the other SWI-Prolog packages on NetBSD.  Many
    apply to other BSD variations.  Thanks!

  * FIXED: Many typos and some clarifications in the manual pointed out
    by Jack Keel.  Thanks!

  * FIXED: predicate reference handling when running out of stack.  This
    could leave the system unstable after an out-of-stack, especially
    caused by dynamic code.

  * FIXED: Documentation of file_directory_name/2 (Lourens van der
    Meij).

  * PORT: Deal with missing rl_done declarations from older readline
    libraries (Nide Naoyuki).

  * FIXED: Language setting for test.pl (Nide Naoyuki).

  * FIXED: Check argument domain of random/1 and properly report error.
    Spotted by Pablo Lopez.

  * FIXED: Avoid absolute_file_name/[2,3] to dig indefinitely for
    non-existing paths if there is a recursive definition in the search
    paths (Bob Wielinga).

  * ADDED: set_prolog_flag(verbose_file_search, true). to make