@@ -152,3 +152,4 @@ FUNCTOR(ATOM_assert, 1),
 FUNCTOR(ATOM_shared_object, 2),
 FUNCTOR(ATOM_buffer, 1),
 FUNCTOR(ATOM_close_on_abort, 1),
+FUNCTOR(ATOM_punct, 2),
